# linux-subsystem-for-windows

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  autounattend.xml
client/: CMakeLists.txt
client/resources/: CMakeLists.txt  resources.c  resources.xml
client/resources/ui/: installer.blp  installer.ui
client/src/: application.cpp  application.hpp  autounattend_manager.cpp  autounattend_manager.hpp  installer_window.cpp  installer_window.hpp  ipc.cpp  ipc.hpp  main.cpp  vm_manager.cpp  vm_manager.hpp  worker.cpp  worker.hpp
client/src/net/: http.cpp  http.hpp  microsoft_interface.cpp  microsoft_interface.hpp  multipart_transfer.cpp  multipart_transfer.hpp
client/src/templates/: autounattend_template.hpp  libvirt_domain_template.hpp
client/src/util/: byte_utils.hpp  defer.hpp
